--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "bugs": {
     "url": "https://github.com/EvvTim/simple-countdown/issues"
   },
-  "homepage": "https://github.com/EvvTim/simple-countdown#readme",
+  "homepage": "https://evvtim.github.io/simple-countdown",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
